# webtop

./: Cargo.toml  README.md  TODO
.cargo/: config.toml
.github/workflows/: clippy-check.yml
src/: cpu.rs  main.rs
static/: script.js  styles.css
templates/: index.html
